--- a/style/style.css
+++ b/style/style.css
@@ -1,43 +1,49 @@
 @import url('https://fonts.cdnfonts.com/css/gilroy-bold');
 
 @keyframes glow-button {
-    0% { box-shadow: 0 0 5px #a99d14; }
-    50% { box-shadow: 0 0 20px #e1ee26; }
-    100% { box-shadow: 0 0 5px #fffb00; }
+    0% {
+        box-shadow: 0 0 5px #a99d14;
+    }
+    50% {
+        box-shadow: 0 0 20px #e1ee26;
+    }
+    100% {
+        box-shadow: 0 0 5px #fffb00;
+    }
 }
 
-body{
+body {
     font-family: 'Gilroy-Medium', sans-serif;
 }
 
-.nav-bar{
+.nav-bar {
     background-color: #6246e4;
     display: flex;
     justify-content: space-between;
     padding: 0 10%;
 }
 
-.nav-bar .left-block{
+.nav-bar .left-block {
     display: flex;
     align-items: center;
 }
 
-.nav-bar .left-block img{
+.nav-bar .left-block img {
     border-radius: 100%;
     margin: 0 10px 20px 0;
 }
 
-.nav-bar .left-block p{
+.nav-bar .left-block p {
     font-size: 30px;
     color: #ffffff;
     font-weight: bold;
 }
 
-.nav-bar .right-block{
+.nav-bar .right-block {
     display: flex;
 }
 
-.nav-bar .right-block a{
+.nav-bar .right-block a {
     position: relative;
     /*top: 33%;*/
     transform: translate(0%, 33%);
@@ -50,25 +56,25 @@ body{
     transition: all 0.5s ease;
 }
 
-.nav-bar .right-block a:visited{
+.nav-bar .right-block a:visited {
     color: #ffffff;
 }
 
-.nav-bar .right-block a:hover{
+.nav-bar .right-block a:hover {
     color: #cccccc;
 }
 
-.nav-bar .right-block a:active{
+.nav-bar .right-block a:active {
     color: #999999;
 }
 
-.intro{
+.intro {
     background-color: #6246e4;
     display: flex;
     padding: 0 10%;
 }
 
-.intro .content h1{
+.intro .content h1 {
     width: 50%;
     /**
     * sticky   -> in raport interior cu parinte, sensibil la scrol
@@ -90,7 +96,7 @@ body{
     font-weight: bold;
 }
 
-.intro .content p{
+.intro .content p {
     width: 50%;
     padding-bottom: 5%;
 
@@ -98,7 +104,7 @@ body{
     color: #ffffff;
 }
 
-.intro .content button{
+.intro .content button {
     background-color: #ffffff;
     border-radius: 50px;
     border-width: 2px;
@@ -109,7 +115,7 @@ body{
     font-weight: bold;
 }
 
-.intro .content button:hover{
+.intro .content button:hover {
     background-color: #ea831b;
     color: #ffffff;
     animation: glow-button 5s ease-in-out;
@@ -117,21 +123,21 @@ body{
     cursor: pointer;
 }
 
-.intro .content button:active{
+.intro .content button:active {
     color: #e3ff65;
 }
 
-.intro .image{
+.intro .image {
     width: 50%;
     display: block;
 }
 
-.intro .image img{
+.intro .image img {
     max-width: 100%;
     max-height: 100%;
 }
 
-.partners{
+.partners {
     background-color: #f7fafd;
     padding: 1% 10%;
     display: grid;
@@ -139,7 +145,7 @@ body{
     grid-column-gap: 5%;
 }
 
-.options{
+.options {
     display: flex;
     flex-direction: row;
     padding: 5% 15% 5% 10%;
@@ -147,7 +153,7 @@ body{
     gap: 10%;
 }
 
-.option{
+.option {
     background-color: #f7f9fc;
     display: flex;
     flex-direction: column;
@@ -155,19 +161,19 @@ body{
     width: 25%;
 }
 
-.option img{
+.option img {
     align-self: center;
     margin: 15% 0 10% 0;
 }
 
-.option h2{
+.option h2 {
     margin: 0 0 0 10%;
     word-spacing: 12px;
     letter-spacing: 1px;
     white-space: nowrap;
 }
 
-.option .option-hidden{
+.option .option-hidden {
     /**
     * overflow                -> daca un copil depaseste parintele, atunci depasirea va fi ascunsa
     * white-space: nowrap     -> stabilim actiunea la depasire
@@ -178,35 +184,35 @@ body{
     overflow: hidden;
 }
 
-.option p{
+.option p {
     margin: 0 10% 15% 10%;
     font-size: 16px;
 }
 
-.we-take-care{
+.we-take-care {
     display: flex;
     gap: 20%;
     padding: 3% 10%;
 }
 
 .we-take-care > p,
-.we-take-care > h1{
+.we-take-care > h1 {
     padding: 0 5%;
 }
 
-.we-take-care .enum-block{
+.we-take-care .enum-block {
     display: flex;
     align-items: center;
     padding: 1% 7% 5% 5%;
     gap: 7%;
 }
 
-.we-take-care .enum-block.transparent{
+.we-take-care .enum-block.transparent {
     border-radius: 20px;
     box-shadow: 1rem 1rem 5rem 5rem #f5fafe
 }
 
-.we-take-care .circle{
+.we-take-care .circle {
     display: flex;
     border-radius: 50%;
     box-shadow: #f8f7f7 0 20px;
@@ -231,7 +237,38 @@ body{
 }
 
 
-.we-take-care .circle span{
+.we-take-care .circle span {
     color: #ffffff;
     font-weight: bold;
+}
+
+.footer {
+    background-color: #f7f9fc;
+    display: flex;
+    justify-content: space-between;
+    padding: 0 10%;
+}
+
+.footer .left-block {
+    display: flex;
+    align-items: center;
+}
+
+.footer .left-block img {
+    border-radius: 100%;
+}
+
+.footer .left-block p {
+    font-size: 28px;
+    color: #2d2e2e;;
+    font-weight: bold;
+    letter-spacing: 1px;
+    margin-top: 25%;
+}
+
+.footer h3 {
+    word-spacing: 3px;
+    letter-spacing: 1px;
+    text-transform: uppercase;
+    color: #2d2e2e;
 }
