--- a/style/style.css
+++ b/style/style.css
@@ -265,7 +265,7 @@ body {
     color: #2d2e2e;
 }
 
-.form-modal{
+.form-modal {
     display: none;
     position: fixed;
     z-index: 1;
@@ -273,7 +273,7 @@ body {
     top: 0;
     width: 100%;
     height: 100%;
-    background-color: rgba(0,0,0,0.5);
+    background-color: rgba(0, 0, 0, 0.5);
 }
 
 .form {
@@ -415,4 +415,26 @@ body {
 
 .form .form-row:nth-child(5) .form-element:last-child select:focus {
     outline: none;
+}
+
+.table-section {
+    display: none;
+    padding: 80px 135px;
+    border-radius: 10px;
+}
+
+.table {
+    border-collapse: collapse;
+}
+
+.table th,
+.table td {
+    text-align: left;
+    border: 1px none #565c64;
+    border-bottom-style: solid;
+    padding: 20px;
+}
+
+.table tbody tr:hover {
+    background-color: #b7b7b7;
 }
